# ChangeLog for net-fs/samba
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-fs/samba/ChangeLog,v 1.352 2009/01/04 17:51:15 armin76 Exp $

  04 Jan 2009; Raúl Porcel <armin76@gentoo.org> samba-3.0.33.ebuild:
  s390/sh stable wrt #247620

  01 Dec 2008; Brent Baude <ranger@gentoo.org> samba-3.0.33.ebuild:
  Marking samba-3.0.33 ppc64 for bug 247620

  29 Nov 2008; Raúl Porcel <armin76@gentoo.org> samba-3.0.33.ebuild:
  alpha/arm/ia64/sparc stable wrt #247620

  28 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org> samba-3.0.33.ebuild:
  Fix quotation

  28 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org> samba-3.0.33.ebuild:
  ppc stable, bug #247620

  28 Nov 2008; Markus Meier <maekke@gentoo.org> samba-3.0.33.ebuild:
  amd64/x86 stable, bug #247620

  28 Nov 2008; Jeroen Roovers <jer@gentoo.org> samba-3.0.33.ebuild:
  Stable for HPPA (bug #247620).

*samba-3.0.33 (28 Nov 2008)

  28 Nov 2008; Tiziano Müller <dev-zero@gentoo.org> +samba-3.0.33.ebuild:
  Version bump (fixes security bug #247620 / CVE-2008-4314)

  22 Sep 2008; Jeroen Roovers <jer@gentoo.org> samba-3.0.32.ebuild:
  Stable for HPPA (bug #237913).

  22 Sep 2008; Raúl Porcel <armin76@gentoo.org> samba-3.0.32.ebuild:
  alpha/ia64/sparc stable wrt #237913

  20 Sep 2008; Tobias Scherbaum <dertobi123@gentoo.org> samba-3.0.32.ebuild:
  ppc stable, bug #237913

  17 Sep 2008; Markus Meier <maekke@gentoo.org> samba-3.0.32.ebuild:
  amd64/x86 stable, bug #237913

  17 Sep 2008; Brent Baude <ranger@gentoo.org> samba-3.0.32.ebuild:
  stable ppc64, bug 237913

*samba-3.0.32 (29 Aug 2008)

  29 Aug 2008; Tiziano Müller <dev-zero@gentoo.org> +samba-3.0.32.ebuild:
  Version bump (bug #236110)

*samba-3.0.31 (08 Aug 2008)

  08 Aug 2008; Tiziano Müller <dev-zero@gentoo.org> metadata.xml,
  +samba-3.0.31.ebuild:
  Version bump, readded oav USE-flag (bug #199769).

*samba-3.2.0_rc2 (12 Jun 2008)

  12 Jun 2008; Tiziano Müller <dev-zero@gentoo.org>