@@ -1,0 +1,22 @@
+dev-libs/popt dev-libs/iniparser virtual/libiconv acl? ( kernel_linux? ( sys-apps/acl ) ) cups? ( net-print/cups ) ipv6? ( sys-apps/xinetd ) ads? ( virtual/krb5 sys-fs/e2fsprogs ) ldap? ( net-nds/openldap ) pam? ( virtual/pam ) readline? ( sys-libs/readline ) selinux? ( sec-policy/selinux-samba ) swat? ( sys-apps/xinetd ) syslog? ( virtual/logger ) fam? ( virtual/fam ) caps? ( sys-libs/libcap )
+dev-libs/popt dev-libs/iniparser virtual/libiconv acl? ( kernel_linux? ( sys-apps/acl ) ) cups? ( net-print/cups ) ipv6? ( sys-apps/xinetd ) ads? ( virtual/krb5 sys-fs/e2fsprogs ) ldap? ( net-nds/openldap ) pam? ( virtual/pam ) readline? ( sys-libs/readline ) selinux? ( sec-policy/selinux-samba ) swat? ( sys-apps/xinetd ) syslog? ( virtual/logger ) fam? ( virtual/fam ) caps? ( sys-libs/libcap )
+0
+mirror://samba/stable/samba-3.2.7.tar.gz
+test
+http://www.samba.org/
+GPL-3
+A suite of SMB and CIFS client/server programs for UNIX
+~amd64 ~x86
+toolchain-funcs portability versionator multilib confutils pam eutils
+linguas_ja linguas_pl acl ads async automount caps cups doc examples ipv6 kernel_linux ldap fam pam quotas readline selinux swat syslog winbind
+
+
+
+0
+
+compile install postinst preinst setup test unpack
+
+
+
+
+
