@@ -35,6 +35,7 @@ DIST samba-3.0.31.tar.gz 20514191 RMD160 dc2051baa8f78f31026f17d9f9ac26ad4b9aa69
 DIST samba-3.0.32.tar.gz 21679285 RMD160 91bea73b9a799b8cb67d5fadd288d9403f175492 SHA1 bcbcff2c00a7cec07886de184d8761fd8b424810 SHA256 8a7f50e0e85eb0c5c5a9bee7d464367afe09366e66a162cdbb4f13860c0fecd6
 DIST samba-3.0.33.tar.gz 49393320 RMD160 c396f9dbd052d9377ca7ff75550173855c9792e2 SHA1 235c15e796a49fcf80b154d608813af8e7ebb329 SHA256 285004bdfb452235ac8ac20d33c083ecb326a10f6ee819dab4032ab5c6563a16
 DIST samba-3.2.0rc2.tar.gz 23798537 RMD160 28fe017a713c30fb054eef92a4c21b39ea8036c9 SHA1 23d8865da812cd6f1fd5a5b690bf9c0761dca902 SHA256 c2bff2c31d147377e58275e8aea76ad5e4dc668067f8f0ab9e0ecfa2afc6bc87
+DIST samba-3.2.7.tar.gz 25177621 RMD160 d07c8e8dbf747bf691c5694b9852701e577b1717 SHA1 7fb3b54dbfb59e141bdff8c3762f6a4ba274f258 SHA256 4f2bb8c5785c50ad05d3adc0027c0881211b8a5c51e840651b53b7e455c004a3
 DIST samba-vscan-0.3.6c-beta5.tar.gz 248183 RMD160 6929c30b57e342c4bdf6a6b432fbe41c2ac70a74 SHA1 9e1b37225246ff2f19e37aceb97a680afc82cdda SHA256 bfe910d54add8dcb87d5babdf50127a6dcf079e0e90ad9947b4cbfdbe3e3037d
 EBUILD samba-3.0.28.ebuild 9283 RMD160 7b7b2c477fb2abcafd32067575c33eb712a92140 SHA1 afb536f0dcafcdd411ed0ac51d7f852c6925ed1b SHA256 857d28fc7d3dfdf424b23ad5d03cd34030051a95932ca6797ed41b504bc358ec
 EBUILD samba-3.0.28a-r1.ebuild 9381 RMD160 791e705917d9451c674de090a6530eb0fd6a46f1 SHA1 b4a7e7835a291946b6ec0006d80b1593f17b960f SHA256 15706b03b632eca9e2f19407c1625e58e74cf36bf51b2e54d74e68e54159b7ef
@@ -43,5 +44,6 @@ EBUILD samba-3.0.31.ebuild 10181 RMD160 98ce7c399f12ddbe428134198fea40ecbcf1491e
 EBUILD samba-3.0.32.ebuild 10168 RMD160 28c0579b851622a54c8a455681ead6369466a71b SHA1 9663e85817b2f8016e75356669da992fce48b39c SHA256 0eb10b229e54c1a3847e32e41c557342974e31402ff72dea9340a09c1ef5796c
 EBUILD samba-3.0.33.ebuild 10171 RMD160 20100c365e5a855ddc3f3709da2993c9bb650a65 SHA1 bbed50cfbd692d21afb4d9112302685246c009b2 SHA256 a257a4e16024acb0c0dce88e1bfec1e4cc212e264956468d0183aac87748b75e
 EBUILD samba-3.2.0_rc2.ebuild 8524 RMD160 3059d780ce7ef1f206d90f959cd1e9c0ed8fa57c SHA1 7db27ea7b786e7f71f9b734109277c9c6d72d78f SHA256 b406f8a11e900190813cdac175f573bc0e7cf182e011d88531e52b81071a733b
-MISC ChangeLog 59580 RMD160 e840c64804a01b4174e284f6dafc3968df9db791 SHA1 7e8df92c51a3bb0a86b3ab7c2d070c329382251e SHA256 0fcd3a08f29ac297edaf876522363166aeacae558df0b0bace353b49d19feaa6
+EBUILD samba-3.2.7.ebuild 7983 RMD160 6c05b940a23e0462cc88a57825cc80b09f5bd162 SHA1 7bafeea6b44393a875a8090d7289c0f4257569d4 SHA256 ed40fe44b382181a2097d2ebec5f744bdd436dc9d97f3def5831e65201e3b27c
+MISC ChangeLog 59699 RMD160 c14830de221eb45bc740e6fa6954d2f3350a9ec2 SHA1 77bd82c7eebb3d30b98858c846f777b876dc86c5 SHA256 7ff295bf042fe83330e391884831a6851cd75ab14a12a999f5a9ffb95a5abdf2
 MISC metadata.xml 950 RMD160 4947143536f9776d7dd7f7d6552d624e1f2ac14d SHA1 ef8a8c0c5cd229c88b1f93042ebfbdafaf45deb2 SHA256 b040a13821dbd3f1214b96ed5a808188ef0996161b0ce0cc11de8d8397de960f
