@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/net-fs/samba/ChangeLog,v 1.352 2009/01/04 17:51:15 armin76 Exp $
 
+  19 Jan 2009; Caleb Cushing <xenoterracide@gmail.com> samba-3.2.7.ebuild:
+  version bump
+
+*samba-3.2.7 (19 Jan 2009)
+
   04 Jan 2009; Raúl Porcel <armin76@gentoo.org> samba-3.0.33.ebuild:
   s390/sh stable wrt #247620
 
